nearly complete PDF conversion, fix pdf font

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,16 @@
             <artifactId>simple-odf</artifactId>
             <version>0.8.2-incubating</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>fontbox</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
