--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>fontbox</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.27</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
